--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ content="ESPORTS CHUCHU" />
             </div>
         </div>
         <div class="kv">
-            <img src="//https://chuchudayne.dcsesports.repl.co/images/slogan.png" alt="">
+            <img src="//chuchudayne.dcsesports.repl.co/images/slogan.png" alt="">
         </div>
         <div class="content">
             <div class="part1 monitor">
