change image - fix js file - index

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ content="ESPORTS CHUCHU" />
             </div>
         </div>
         <div class="kv">
-            <img src="//https://chuchudayne.dcsesports.repl.co/images/slogan.png" alt="">
+            <img src="//chuchudayne.dcsesports.repl.co/images/slogan.png" alt="">
         </div>
         <div class="content">
             <div class="part1 monitor">
@@ -64,10 +64,10 @@ content="ESPORTS CHUCHU" />
                             <div class="swiper-button-prev sp"></div>
                           <div class="part1-page">
                             <div class="items active">
-                                <a href="javascript:;" onclick="PTTSendClick('btn','xmp','新门派');" class="btn btn2 sp"></a>
+                                <a href="javascript:;" onclick="PTTSendClick('btn','xmp');" class="btn btn2 sp"></a>
                             </div>
                             <div class="items">
-                                <a href="javascript:;" onclick="PTTSendClick('btn','xjz','新机制');" class="btn btn1 sp"></a>
+                                <a href="javascript:;" onclick="PTTSendClick('btn','xjz');" class="btn btn1 sp"></a>
                             </div>
                           </div>
                     </div>
@@ -81,7 +81,7 @@ content="ESPORTS CHUCHU" />
                           <div class="swiper-slide">
                             <div class="box">
                                <div class="video">
-                                    <video src="//jxqy.lv.game.qq.com/dis_kt_1b0cc9ba5445085562ecdc5490dc13f0_1691550407/0b5354abaaaaoyabelgtkbsop36dcdxqaeaa.f0.mp4" controls  ></video>
+                                    <video src="//https://youtu.be/i6yqPTbGq3c" controls  ></video>
                                </div>
                                 <p class="txt">
 text
@@ -91,7 +91,7 @@ text
                           <div class="swiper-slide">
                             <div class="box">
                                 <div class="video">
-                                    <video src="//jxqy.lv.game.qq.com/dis_kt_d44c356a774f861a7750bff48b2c940d_1691550484/0b53ymabeaaafiabbgwtkjsopq6dclbqaeqa.f0.mp4" controls  ></video>
+                                    <video src="//https://youtu.be/i6yqPTbGq3c" controls  ></video>
                                </div>
                                 <p class="txt">
 text của fandom đang tìm thứ gì để viết
@@ -100,7 +100,7 @@ text của fandom đang tìm thứ gì để viết
                           </div>
                           <div class="swiper-slide">
                             <div class="box">
-                                <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/img1.png" alt="">
+                                <img src="/images/boardcast2.jpg" alt="">
                                 <p class="txt">
                                     text
                                 </p>
@@ -109,24 +109,24 @@ text của fandom đang tìm thứ gì để viết
                         </div>
                     </div>
                     <div class="pages">
-                        <div class="items active" onclick="PTTSendClick('btn','wydqmcz','忘忧岛全面重置');">
+                        <div class="items active" onclick="PTTSendClick('btn','wydqmcz');">
                             <span class="icon">
-                                <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/dot.png" class="img1" alt="">
-                                <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/dot-on.png" class="img2" alt="">
+                                <img src="/images/dot.webp" class="img1" alt="">
+                                <img src="/images/dot-on.webp" class="img2" alt="">
                             </span>
                             <p class="sp">Esports</p>
                         </div>
-                        <div class="items" onclick="PTTSendClick('btn','zcmshx','主城美术焕新');">
+                        <div class="items" onclick="PTTSendClick('btn','zcmshx');">
                             <span class="icon">
-                                <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/dot.png" class="img1" alt="">
-                                <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/dot-on.png" class="img2" alt="">
+                                <img src="/images/dot.webp" class="img1" alt="">
+                                <img src="/images/dot-on.webp" class="img2" alt="">
                             </span>
                             <p class="sp">Fandom</p>
                         </div>
-                        <div class="items" onclick="PTTSendClick('btn','uijmhx','UI界面焕新');">
+                        <div class="items" onclick="PTTSendClick('btn','uijmhx');">
                             <span class="icon">
-                                <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/dot.png" class="img1" alt="">
-                                <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/dot-on.png" class="img2" alt="">
+                                <img src="/images/dot.webp" class="img1" alt="">
+                                <img src="/images/dot-on.webp" class="img2" alt="">
                             </span>
                             <p class="sp">Boardcast</p>
                         </div>
@@ -152,7 +152,7 @@ text của fandom đang tìm thứ gì để viết
                         </div>
                     </div>
                     <div class="items" data-anijs="if: scroll, on: window, do: fadeInRight animated, before: $scrollReveal repeat">
-                        <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/part3_img2.png" alt="">
+                        <img src="/images/boardcast1.jpg" alt="">
                         <div class="txt">
                             <h3  class="part3_tit2 db">Các Project mình đã làm</h3>
                             <p>
@@ -182,7 +182,8 @@ text của fandom đang tìm thứ gì để viết
                             <div class="part4_tab">
                                 <a href="javascript:;"  class="sp active">BOT</a>
                             </div>
-                                <p class="name sp">A
+                                <p class="name sp">
+                                        A
                                     <br>R
                                     <br>C 
                                     <br>A 
@@ -246,7 +247,6 @@ text của fandom đang tìm thứ gì để viết
     </div>
 <body>
     <script src="/js/jquery/jquery-1.11.3.min.js"></script>
-<!-- <script src="//game.gtimg.cn/images/js/2018foot/foot.js"></script> -->
 <script src="/js/ani.js"></script>
 <script src="/js/swiper.min.js"></script>
 <script src="/js/ping_tcss_tgideas_https_min.js"></script>
@@ -291,12 +291,12 @@ text của fandom đang tìm thứ gì để viết
         $(".peoImg img").eq(num).css("display","block").siblings("img").hide()
       })
 
-      var oNav = $('.right_nav'); //导航容器
- var aNav = oNav.find('li'); //导航
- var aDiv = $('.monitor'); //楼层
+      var oNav = $('.right_nav'); //khu điều hướng
+ var aNav = oNav.find('li'); //dẫn đường
+ var aDiv = $('.monitor'); //sàn
  var headerH = $('.header-wrap').outerHeight()
 
-// 滚动监听
+// User-scroll
 let isBool = true
 let arr = []
         var flag= true;
@@ -304,23 +304,23 @@ let arr = []
 $(window).scroll(function() {
 
 		if(isBool){
-			aDiv.each((index,item)=>{//获取所有楼层的位置保存到数组
+			aDiv.each((index,item)=>{//lấy vị trí các tầng và lưu chúng vào 1 mảng
 				let i =  aDiv.eq(index).offset().top - headerH;
 				arr.push(i)
 
 			})
 			isBool = false
 		}
-	    var winH = $(window).height();//可视窗口高度
-	    var iTop = $(window).scrollTop();//鼠标滚动的距离
-        var contentH = $(document).height();  //内容高度
-		// 控制二维码和导航在一定范围内显示
+	    var winH = $(window).height();//chiều cao của sổ trực quan
+	    var iTop = $(window).scrollTop();//khoảng cách cuộn chuột
+        var contentH = $(document).height();  //chiều cao nội dung
+		// kiểm soát mã QR và điều hướng
         if(iTop >contentH/12 && contentH > (iTop + winH +2)){ 
 			$('.right_niu').show()
         }else{
             $('.right_niu').hide()
 		}
-		// 控制楼层监听滚动到指定区域添加样式
+		// kiểm soát khu vực chỉ định
 
 			 arr.filter((item,index)=>{
 			 	if(iTop >= item - 70 ){
@@ -329,24 +329,22 @@ $(window).scroll(function() {
 			 	}
 			 })
 		})
-//点击回到当前楼层
+//bấm để quay lại tầng hiện tại
  aNav.click(function() {
      var t = aDiv.eq($(this).index()).offset().top - headerH;
      $('body,html').animate({
          "scrollTop": t
      }, 200);
-    //  $(this).addClass('font_color').siblings().removeClass('font_color');
  });
-    //此段代码不能放到外链JS中，
-    var setSite = { //设置网站属性
-        siteType: "a20230808zlp", //必填项:"os"代表是官网，如果不是，则填写actName例如a20160701xxx
-        pageType: "index", //必填项:本页面的定位；按照页面含义填写例如main||list||detail||download||share||page1||pageN
-        pageName: "首页", //必填项:页面中文名
-        osact: 0, //选填项:是否是官网专题(在官网运营的专题)boolean；默认是0；可以在链接上加入参数osact=1来灵活设置
-        ingame: 0, //选填项:是否投放在游戏APP内boolean；默认是0；可以在链接上加入参数ingame=1来灵活设置
-        stayTime:'pc' //选填项:是否需要统计停留时长boolean；默认是0
+    var setSite = { 
+        siteType: "ChuChu", 
+        pageType: "index", 
+        pageName: "ChuChu", 
+        osact: 0, 
+        ingame: 0, 
+        stayTime:'pc' 
     }
-    if (typeof (pgvMain) == 'function') pgvMain();//千万不能忘记！
+    if (typeof (pgvMain) == 'function') pgvMain();
 </script>
 </body>
 </html>
