add QR - edit HTML - add block F12

--- a/index.html
+++ b/index.html
@@ -215,19 +215,19 @@ text của fandom đang tìm thứ gì để viết
             </div>
             <div class="part5 container">
                 <div class="items">
-                    <img src="/images/fb.ChuChu.png" alt="">
+                    <img src="/images/QR-ig.png" alt="">
                     <p>Instagram</p>
                 </div>
                 <div class="items">
-                    <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/ewm2.png" alt="">
+                    <img src="/images/QR-fb.png" alt="">
                     <p>Facebook</p>
                 </div>
                 <div class="items">
-                    <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/ewm3.png" alt="">
+                    <img src="/images/QR-zalo.png" alt="">
                     <p>Zalo</p>
                 </div>
                 <div class="items">
-                    <img src="//game.gtimg.cn/images/jxqy/cp/a20230808zlp/ewm4.png" alt="">
+                    <img src="/images/QR-github.png" alt="">
                     <p>GitHub</p>
                 </div>
             </div>
