--- a/embed/index.html
+++ b/embed/index.html
@@ -38,6 +38,7 @@
         <script src="./assets/js/script.js" defer></script>
     </head>
     <body class="gui emptyEmbed">
+        <div class="w-100 pa2 absolute"><div class="w-auto tc yellow"><!-- react-text: 4 -->Phiên bản cũ hơn -v3  <!-- /react-text --><a class="blue" href="https://chuchudayne.com/embed-v3" target="_blank"> Tại Đây</a></div></div>
         <div class="main">
             <section class="side1 noDisplay">
                 <div class="chooser needed">
