--- a/embed-v3/index.html
+++ b/embed-v3/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" href="/embedbuilder/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <title>Embed Visualizer</title>
-    <link href="/embed/css/main.1e6de617.css" rel="stylesheet">
+    <title>Embed Visualizer - v3</title>
+    <link href="/embed-v3/embedbuilder/css/main.1e6de617.css" rel="stylesheet">
 </head>
 
 <body>
     <div id="root"></div>
-    <script type="text/javascript" src="/embed/js/main.8c6051d2.js"></script>
+    <script type="text/javascript" src="/embed-v3/embedbuilder/js/main.8c6051d2.js"></script>
 </body>
 
 </html>
