--- a/embed/index.html
+++ b/embed/index.html
@@ -572,12 +572,12 @@
                     <div class="contents">
                         <img src="https://cdn.discordapp.com/embed/avatars/1.png" class="avatar" alt=" " />
                         <h2>
-                            <span class="username" role="button">Discord Bot</span>
+                            <span class="username" role="button">Dino Star</span>
                             <span class="botTag">
                                 <svg aria-label="Verified bot" class="botTagVerified" aria-hidden="false" width="16" height="16" viewBox="0 0 16 15.2">
                                     <path d="M7.4,11.17,4,8.62,5,7.26l2,1.53L10.64,4l1.36,1Z" fill="currentColor"></path>
                                  </svg>                                 
-                                <span class="botText">BOT</span>
+                                <span class="botText">Hệ Thống</span>
                             </span>
                             <span class="timeText"></span>
                         </h2>
