--- a/iviettech2/index.html
+++ b/iviettech2/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">PAGE+</a>
+                <li><a href="#">Page +</a>
                     <ul>
                         <li><a href="#">PAGE 1</a></li>
                         <li><a href="#">PAGE 2 +</a>
@@ -30,8 +30,8 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">GALLERY +</a>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Gallery +</a>
                     <ul>
                         <li><a href="#">GALLERY 1</a></li>
                         <li><a href="#">GALLERY 2</a></li>
@@ -43,6 +43,9 @@
     </header>
     <div class="kv">
         <img src="/images/slogan1.png" alt="">
+    </div>
+    <div class="content">
+        
     </div>
 </body>
 
