--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <!DOCTYPE html>
 <html lang="zh-CN">
 
@@ -347,9 +347,9 @@ $(window).scroll(function() {
     if (typeof (pgvMain) == 'function') pgvMain();
 </script>
 </body>
-</html>
+</html> -->
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -405,4 +405,4 @@ $(window).scroll(function() {
          <a class="white" href="https://chuchudayne.com/embed-v3" target="_blank"> embed - v3 </a></div></div>    
          <a class="white" href="https://chuchudayne.com/embed" target="_blank"> embed - v4 </a></div></div>   
 </body>
-</html> -->
+</html>
