add embed builder

--- a/header.html
+++ b/header.html
@@ -42,8 +42,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="#">Placeholder</a></li>
-              <li><a class="dropdown-item" href="#">Embed Builder - V3</a></li>
-              <li><a class="dropdown-item" href="#">Embed Builder - V4</a></li>
+              <li><a class="dropdown-item" href="./embed-v3">Embed Builder - V3</a></li>
+              <li><a class="dropdown-item" href="./embed">Embed Builder - V4</a></li>
               <li><a class="dropdown-item" href="#">Support Server</a></li>
             </ul>
           </li>
