--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ChuChu Profile</title>
+  <title>Dino Bot - Discord</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -26,14 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Mamba - v2.0.1
-  * Template URL: https://bootstrapmade.com/mamba-one-page-bootstrap-template-free/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-  
 </head>
 
 <body>
@@ -46,7 +38,7 @@
         <i class="icofont-instagram"></i> @odaycomotchuchu
       </div>
       <div class="social-links float-right">
-        <a href="https://discord.gg/yh3SgAuD" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
+        <a href="https://discord.gg/dinogaming" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
         <a target="_blank" href="https://github.com/socktow" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/odaycomotchuchu/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!-- <a href="#" class="skype"><i class="icofont-skype"></i></a> -->
@@ -71,9 +63,8 @@
           <li><a href="#about">Information</a></li>
           <li><a href="#game">PROJECT</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Gallery</a></li>
           <li><a href="#team">Homie</a></li>
-          <!-- <li class="drop-down"><a href="">Drop Down</a>
+          <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="drop-down"><a href="#">Drop Down 2</a>
@@ -88,7 +79,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
               <li><a href="#">Drop Down 5</a></li>
-            </ul> -->
+            </ul>
           </li>
           <li><a href="#contact">Join Us</a></li>
         </ul>
@@ -172,18 +163,9 @@
 
             <div class="row no-gutters">
               <div class="col-lg video-box">
-                <!-- <img src="assets/img/about.jpg" class="img-fluid" alt=""> -->
-                <!-- <iframe src="" style="margin-top: 50px;" width="1110" height="625"></iframe> -->
-      
               </div>
 
             </div>
-
-            <!-- <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title">Bersepeda</h4>
-              <p class="description">Bersepeda merupakan olahraga yang menggerakan semua badan, butuh kerjasama untuk setiap organ tubuh yang melakukan olahraga ini.</p>
-            </div> -->
 
             <div class="row">
               <div class="col-lg-2">
@@ -420,166 +402,13 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Our Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg bg-dark text-light">
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="section-title">
-          <h2>Thư viện ảnh</h2>
-          <p>Cũng chả có gì đặc sắc lắm đâu</p>
-        </div>
-
-       <!--  <div class="row">
-          <div class="col-lg-12">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Classic</li>
-              <li data-filter=".filter-card">Indie</li>
-              <li data-filter=".filter-web">Horror</li>
-            </ul>
-          </div>
-        </div> -->
-
-        <div class="row portfolio-container">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/yama.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Yama raja</h4>
-                <p>Elsword</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/yama.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-eye"></i></a>
-                  <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/eevee.jpg"class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Glaceon vs Leafeon</h4>
-                <p>Pokemon</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/eevee.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
-                  <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/NA.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Na</h4>
-                <p>1 người em của mình</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/NA.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-eye"></i></a>
-                  <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/tohu.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Tohu</h4>
-                <p>Elsword</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/tohu.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="icofont-eye"></i></a>
-                  <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Sona.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Sona</h4>
-                <p>League of legends</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/Sona.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="icofont-eye"></i></a>
-                  <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/giang.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>LTG</h4>
-                <p>18/8/2017 18:03</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/giang" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-eye"></i></a>
-                  <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/giang2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Lost</h4>
-                <p>28/8/2017 21:23</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/giang2.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-eye"></i></a>
-                  <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/giang3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Try</h4>
-                <p>28/9/2017 21:54</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/giang3.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="icofont-eye"></i></a>
-                  <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/zz1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Better</h4>
-                <p>28/10/2017 21:43</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/zz1.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
-                  <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Our Portfolio Section -->
-
     <!-- ======= Our Team Section ======= -->
     <section id="team" class="team bg-dark text-light">
       <div class="container">
 
         <div class="section-title">
-          <h2>Các homie của tôi</h2>
-          <p>Có người đến có người đi và có người ở lại , Có lúc khôn và cũng vài lần lỡ dại =]]z </p>
+          <h2>DINO STAFF</h2>
+          <p></p>
         </div>
 
         <div class="row">
